# sbe_latency_bot

./: .gitignore  Cargo.toml  README.md  build.rs  tomobject]@{Adds=[int][0]  ustomobject]@{Adds=[int][0]
.github/: copilot-instructions.md
.github/workflows/: ci-auto-repair.yml  ci-instructions-and-build.yml  ci-test.yml  ci.yml
config/: haram.list
data/: penalties.json
docs/: DECODER.md
native/: CMakeLists.txt  VERSIONS.txt
native/include/: bsbe_bridge.h
native/schemas/: spot_sbe.xml
native/src/: bsbe_bridge.cc
src/: affinity.rs  ahi.rs  capital.rs  channels.rs  clock.rs  config.rs  data_feed.rs  decoder_sbe.rs  execution.rs  fees.rs  ffi.rs  filters.rs  gates.rs  lib.rs  logging.rs  main.rs  metrics.rs  mode.rs  positions.rs  processor.rs  rate_limit.rs  reset.rs  rings.rs  risk.rs  sbe.rs  time_utils.rs  types.rs  universe.rs
src/alt_gate/: ahi.rs  mod.rs
src/data_feed/: schema_guard.rs
src/execution/: ws_orders.rs
src/net/: backoff.rs
src/private_stream/: mod.rs
src/strategy/: shadow.rs
tests/: decoder.rs  e2e_auto_heal_then_success.rs  e2e_auto_heal_then_success.rs.tmp  e2e_capital_slots_positions.rs  e2e_min_notional_disables_for_today.rs  e2e_reset_warmup_enable.rs  e2e_singleflight_and_token_bucket.rs  harness_smoke.rs  support.rs  warmup_reset_exec_tests.rs
