[package]
name = "sbe_latency_bot"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[[bin]]
name = "sbe_latency_bot"
path = "src/main.rs"
required-features = ["prod"]

[dependencies]
tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
reqwest = { version = "0.12", features = ["json", "http2", "rustls-tls", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
core_affinity = "0.8"
dashmap = "5.5"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
bytes = "1.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "time", "std", "env-filter"] }
once_cell = "1.19"
anyhow = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
http = "1"
byteorder = "1.5"
url = "2.5"
rust_decimal = { version = "1.36", features = ["serde"] }
arc-swap = "1.7"
spot_sbe = { git = "https://github.com/azoz54321/spot_sbe.git", package = "spot_sbe", rev = "b77d130473b39191a83fc18c97101e04777a90f2", optional = true }

[features]
default = ["prod"]
prod = ["dep:spot_sbe"]
test-mode = []
